--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,23 @@
             <artifactId>javafx-fxml</artifactId>
             <version>13</version>
         </dependency>
+        <dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.15</version> <!-- Check for the latest version -->
+    </dependency>
+    <dependency>
+    <groupId>org.xerial</groupId>
+    <artifactId>sqlite-jdbc</artifactId>
+    <version>3.42.0.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.mindrot</groupId>
+        <artifactId>jbcrypt</artifactId>
+        <version>0.4</version>
+        <scope>system</scope>
+        <systemPath>${project.basedir}/libs/jbcrypt-0.4.jar</systemPath>
+    </dependency>
     </dependencies>
     <build>
         <plugins>
